# stm32f3-oscilloscope

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  README.rst  build.rs  memory.x
.cargo/: config
docs/: connections.rst  peripherals.rst
src/: capture.rs  led.rs  main.rs  parallax_8x12_font.rs  siggen.rs  st7735.rs  sysclk.rs
src/old_c/: ST7735.c  ST7735.h  _rust.h
